# music-genre-classifier

./: .gitignore  .pre-commit-config.yaml  README.md  base_class.py  setup.cfg  split_dataset.py  tox.ini
configs/: default.yaml  knn_only.yaml
music_genre_classifier/: __main__.py
music_genre_classifier/dataset/: __init__.py  create_dataset.py  split_dataset.py
music_genre_classifier/models/: __init__.py  base.py  builder.py  knn.py  neural_net.py
tests/: dataset_test.py  test_dataset.py
